# Faze4-Robotic-arm

./: BOM_31_10_2023.xlsx  BOM_7_11_2023.xlsx  Bom_1.0.xlsx  Bom_1.2_joint2_update.xlsx  Faze4_Work_Envelope.m  LICENSE  README.md
FAZE4_distribution_board_test_codes/: FAZE4_V2_PINS.h
FAZE4_distribution_board_test_codes/FAZE4_V2_PINS_TEST/: FAZE4_V2_PINS_TEST.ino
FAZE4_distribution_board_test_codes/ssd1306_128x64_i2c_Faze4_v2/: ssd1306_128x64_i2c_Faze4_v2.ino
FAZE4_distribution_board_test_codes/stepper_move_test_teensy/: stepper_move_test_teensy.ino
Faze4_DIST_board_v2_files/: Faze4_dist_v2_STEP.step
Faze4_test_code_1.0/: Faze4_test_code_1.0.ino
Software1/High_Level_Matlab/: GUI_Matlab.mlx  Kinematic_model_NOT_DH.mlx
Software1/High_Level_Matlab/Trajectory_Matlab/: Robot_angular_vel.mlx  Robot_calculate_angles.mlx  Robot_ik_code_1.mlx  Robot_path.mlx  Robot_plot_angles_velocity.mlx  Robot_sending.m  Robot_setup.mlx  Robot_simulation.m  Robot_trajectory.mlx
Software1/Low_Level_Arduino/: Arduino_GUI_code.ino
URDF_FAZE4/: CMakeLists.txt  package.xml
URDF_FAZE4/config/: joint_names_Final_light_assembly_URDF.yaml
URDF_FAZE4/launch/: display.launch  gazebo.launch
URDF_FAZE4/meshes/: hvataljka.STL  lakat.STL  nadlaktica.STL  podlaktica.STL  rotary_base.STL  saka.STL
URDF_FAZE4/urdf/: Final_light_assembly_URDF.urdf
docs/: About_faze4.rst  B_Design_decisions.rst  C_Building.rst  D_Printing.rst  Electronics_PCB.rst  F_Code.rst  G_Code2.rst  H_first_startup.rst  I_Robot_data.rst  conf.py  index.rst
(+1 files in other folders)
